# plate-recognition

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
anpr_poc/: __init__.py  config.py  pipeline.py  run.py  types.py
anpr_poc/confirm/: __init__.py  buffer.py  consensus.py  validate.py
anpr_poc/detect/: __init__.py  base.py  export.py  libreyolo.py  onnx_detector.py  stub.py
anpr_poc/io/: __init__.py  sink.py  snapshot.py  source.py
anpr_poc/ocr/: __init__.py  paddle_reco.py  preprocess.py
anpr_poc/track/: __init__.py  tracker.py
config/: formats.yaml  homographie.json  roi.json  thresholds.yaml
data/: README.md  ground_truth.json
demo/: bootstrap_demo.py
docs/: ARCHITECTURE.md  GUIDE_TEST.md  INSTALLATION.md  PIPELINE.md  PROBLEMATIQUES.md  RISQUES.md  ROADMAP.md
eval/: __init__.py  harness.py  metrics.py
scripts/: check_licenses.sh
tests/: test_config.py  test_confirm.py  test_detect_stub.py  test_pipeline.py  test_sinks.py  test_snapshot.py
